objects/HDLContact__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>HDL_Market_Name__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>HDLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HDL_Market_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HDL Market Name</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>HDL Contacts</relationshipLabel>
        <relationshipName>HDL_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Phone__c</fullName>
        <formula>HDL_Market_Name__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <formula>Contact__r.Phone_Extension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <formula>Contact__r.Point_of_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Point of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>HDL Contact</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>HDL ContactId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HDL Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>